Changelog

KEY:
	+ Addition
	- Removal
	~ Change
	* Bug fix
	# Note
	
Version 1:
	+ First version