@@ -8,4 +8,8 @@ KEY:
 	# Note
 	
 Version 1:
-	+ First version
+	+ Teach command
+	+ Vault support
+	+ Change spell with right click
+	+ Spell confringo
+	
